--- a/BLOCK 1 - THE HISTORY OF MONEY/appendix.html
+++ b/BLOCK 1 - THE HISTORY OF MONEY/appendix.html
@@ -1,7 +1,9 @@
-# APPENDIX
+<h1 style="text-align: center">APPENDIX</h1>
 
-**<span style="text-decoration:underline;">APPENDIX A - CARD DISTRIBUTIONS</span>**
 
+<p>
+<strong><span style="text-decoration:underline;">APPENDIX A - CARD DISTRIBUTIONS</span></strong>
+</p>
 
 <table>
   <tr>
@@ -57,9 +59,9 @@
 </table>
 
 
-**<span style="text-decoration:underline;"> \
-APPENDIX B - ROUND 1</span>**
-
+<p>
+<strong><span style="text-decoration:underline;"><br>APPENDIX B - ROUND 1</span></strong>
+</p>
 
 <table>
   <tr>
@@ -95,8 +97,9 @@ APPENDIX B - ROUND 1</span>**
 </table>
 
 
-**<span style="text-decoration:underline;">APPENDIX B - ROUND 2</span>**
-
+<p>
+<strong><span style="text-decoration:underline;">APPENDIX B - ROUND 2</span></strong>
+</p>
 
 <table>
   <tr>
@@ -132,8 +135,9 @@ APPENDIX B - ROUND 1</span>**
 </table>
 
 
-**<span style="text-decoration:underline;">APPENDIX C - ROUND 3</span>**
-
+<p>
+<strong><span style="text-decoration:underline;">APPENDIX C - ROUND 3</span></strong>
+</p>
 
 <table>
   <tr>
@@ -169,8 +173,9 @@ APPENDIX B - ROUND 1</span>**
 </table>
 
 
-**<span style="text-decoration:underline;">APPENDIX D - ROUND 4</span>**
-
+<p>
+<strong><span style="text-decoration:underline;">APPENDIX D - ROUND 4</span></strong>
+</p>
 
 <table>
   <tr>
